--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -22,5 +22,11 @@
                 No results for <span th:text="${location}"></span>
             </p>
         </div>
+
+        <div>
+            <p>
+                Host is <span th:text="${hostname}"></span>
+            </p>
+        </div>
     </body>
 </html>
