loation added to the template

--- a/src/main/resources/templates/weather-result.html
+++ b/src/main/resources/templates/weather-result.html
@@ -9,7 +9,7 @@
     <div>
         <p>
             Today´s weather in
-            <span th:text="${location}"></span>
+            <span th:text="${weatherData.location}"></span>
             is
             <span th:text="${weatherData.weather.main.temp}"></span>
             degree and
